Fixing chicken-and-egg dependency by putting the openssl dependency first, in order to make sure headers are present. 	Change on 2014/12/17 by nnoble <nnoble@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=82349094

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -635,7 +635,7 @@ libs/lib${lib.name}.a: openssl_dep_error
 
 else
 
-libs/lib${lib.name}.a: $(LIB${lib.name.upper()}_OBJS) $(OPENSSL_DEP)
+libs/lib${lib.name}.a: $(OPENSSL_DEP) $(LIB${lib.name.upper()}_OBJS)
 % else:
 libs/lib${lib.name}.a: $(LIB${lib.name.upper()}_OBJS)
 % endif
