Provide a port of cpu related code to posix, and linux.
Properly set this up in our build environment.
	Change on 2014/12/23 by ctiller <ctiller@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=82725899

--- a/vsprojects/vs2013/gpr.vcxproj
+++ b/vsprojects/vs2013/gpr.vcxproj
@@ -111,6 +111,8 @@
     </ClCompile>
     <ClCompile Include="..\..\src\core\support\cmdline.c">
     </ClCompile>
+    <ClCompile Include="..\..\src\core\support\cpu_linux.c">
+    </ClCompile>
     <ClCompile Include="..\..\src\core\support\cpu_posix.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\support\histogram.c">
