Add a --forever flag, to continuously run tests as things change. 	Change on 2015/01/07 by ctiller <ctiller@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=83451760

--- a/src/ruby/Gemfile
+++ b/src/ruby/Gemfile
@@ -1,4 +1,12 @@
 source 'https://rubygems.org'
 
+# Modify this when working locally, see README.md
+# e.g,
+# gem 'beefcake', path: "/usr/local/google/repos/beefcake"
+#
+# The default value is what's used for gRPC ruby's GCE configuration
+#
+gem 'beefcake', path: "/var/local/git/beefcake"
+
 # Specify your gem's dependencies in grpc.gemspec
 gemspec
